# MySqlite

./: CMakeLists.txt
src/: database_connection.cpp  database_connection.h
test/: main_test.cpp
